--- a/index.css
+++ b/index.css
@@ -8,3 +8,17 @@ body {
 .hiddeninput {
     /* display: none; */
 }
+
+.groceryList{
+    display: none;
+}
+
+.itemContainer{
+    margin: 1rem;
+}
+input {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 1px solid black;
+  }
